--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <link type="text/css" rel="stylesheet" href="calendar.css">
   <script src="http://code.jquery.com/jquery-latest.js"></script>
   <script src="calendar.js"></script>
-  <script src="calendar-table.js"></script>
 </head>
 <body>
 
@@ -17,13 +16,13 @@
 
 
 <script>
-  var calendar = new Calendar({ 
-    value: {year: 2012, month: 2 }
+  var calendar = new Calendar({
+   value: new Date(1999, 0),
   });
   $('#calendar-holder').append(calendar.getElement());
 
   $(calendar).on("select", function(e) {
-    $('#value').html(e.value+'');
+    $('#value').html(e.value + '');
   });
 </script>
 
